--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,21 @@
     src: url(../fonts/static/Cabin-BoldItalic.ttf);
 }
 
+@font-face {
+    font-family: Paragrafos ;
+    src: url(../fonts/Cabin-Italic-VariableFont_wdth\,wght.ttf
+    );
+}
+
 h1{
+    text-align: center;
     font-family: FonteTitulo;
-    font-size: 100px;
+    font-size: 75px !important;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 body {
-    background-color: #4370b4;
+    background-color: #4370b4 !important;
 }
 
 header{
@@ -25,7 +32,7 @@ header{
 }
 
 .container{
-    width: 70%;
+    width: 70% !important;
     margin-left: auto;
     margin-right: auto;
 }
@@ -34,4 +41,21 @@ header{
     width: 100%;
     display: flex;
     justify-content: center;
+}
+
+.home-title{
+    margin-top: 20px;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.home-title h2{
+    color: #ffffff;
+    font-family: Paragrafos;
+}
+
+.img-box{
+    display: inline-flex;
+    align-items: center;
 }
