--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@
     );
 }
 
+img{
+    width: 350px;
+    height: 275px;
+}
+
 h1{
     text-align: center;
     font-family: FonteTitulo;
@@ -27,7 +32,8 @@ body {
 }
 
 header{
-    width: 100%;
+    max-width: 100%;
+    width: auto;
     background-color: aliceblue;
 }
 
@@ -56,6 +62,18 @@ header{
 }
 
 .img-box{
-    display: inline-flex;
-    align-items: center;
+    margin-top: 30px;
+}
+
+.imagens{
+    display: grid;
+    justify-content: center;
+    row-gap: 100px;
+    column-gap: 100px;
+    grid-template-columns: auto auto auto;
+}
+
+.imagens img:hover{
+    background-color: #1f1d1dd2;
+    cursor: pointer;
 }
