--- a/css/style.css
+++ b/css/style.css
@@ -26,20 +26,6 @@ img{
     border-radius: 10px;
 }
 
-a{
-    font-family: SemiBold;
-    font-size: 20px;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    text-decoration: none !important;
-    color: #ffffff !important;
-    background-color: #1b1a1ae1;
-    padding: 5px 10px;
-    text-align: center;
-    border-radius: 30px;
-}
-
 h1{
     text-align: center;
     font-family: FonteTitulo;
@@ -48,6 +34,7 @@ h1{
 }
 
 body {
+    width: 100vw;
     background-color: #4370b4 !important;
 }
 
@@ -82,10 +69,15 @@ header{
 }
 
 .img-box{
+    display: flex;
+    justify-content: center;
     margin-top: 30px;
+    width: 100%;
+    max-width: auto;
 }
 
 .imagens{
+    position: relative;
     display: grid;
     justify-content: space-between;
     align-items: center;
@@ -94,16 +86,40 @@ header{
     grid-template-columns: auto auto auto;
 }
 
-.estil-img img:hover{
-    opacity: 0.9;
-    background-color: #1f1d1d;
+.estil-img{
+    position: relative;
+    display: inline-block;
+}
+
+.estil-img:hover img{
+    filter: 
+    grayscale(1)
+    brightness(0.4);
+    transition: .4s ease-in-out;
     cursor: pointer;
 }
 
-.botao{
-    margin-top: 5px;
-    display: none;
-    justify-content: center;
+.conteudo{
+    width: max-content;
+    white-space: nowrap;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.conteudo a{
+    text-decoration: none;
+    color: #ffffff;
+    text-align: center;
+    font-family: SemiBold;
+    font-size: 25px;
+}
+
+.estil-img:hover .conteudo{
+    opacity: 1;
 }
 
 .estil-img h2{
@@ -112,3 +128,58 @@ header{
     white-space: nowrap;
     font-size: 22px;
 }
+
+.estil-img img{
+    display: block;
+    width: 350px;
+    height: 275px;
+    border-radius: 10px;
+}
+
+/* TESTANDO CÓDIGO */
+
+/* .card{
+    width: 400px;
+    aspect-ratio: 1 / 0.7;
+    border-radius: 8px;
+    position: relative;
+}
+
+.card .estil-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: 0.5s ease-in-out;
+}
+
+.card::after{
+    content: "";
+    position: absolute;
+    inset: 0;
+    border: 2px solid white;
+    border-radius: inherit;
+    opacity: 0;
+    transition: 0.4s ease-in-out;
+}
+
+.card:hover img{
+    filter: 
+    grayscale(1)
+    brightness(0.4);
+}
+
+.card:hover::after {
+    opacity: 1;
+    inset: 20px;
+}
+
+.card:hover .conteudo h3{
+    scale: 1;
+    opacity: 1;
+}
+
+.card:hover .conteudo p{
+    opacity: 1;
+    transform: translateY(0);
+} */
+
