--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,6 @@
     src: url(../fonts/static/Cabin-SemiBold.ttf);
 }
 
-img{
-    width: 350px;
-    height: 275px;
-    border-radius: 10px;
-}
-
 h1{
     text-align: center;
     font-family: FonteTitulo;
@@ -71,19 +65,19 @@ header{
 
 .img-box{
     display: flex;
+    width: 100vw;
     justify-content: center;
     margin-top: 30px;
     width: 100%;
-    max-width: auto;
 }
 
 .imagens{
     position: relative;
     display: grid;
-    justify-content: space-between;
     align-items: center;
-    row-gap: 100px;
-    column-gap: 100px;
+    justify-content: space-between;
+    row-gap: 20px;
+    column-gap: 5px;
     grid-template-columns: auto auto auto;
 }
 
@@ -132,8 +126,8 @@ header{
 
 .estil-img img{
     display: block;
-    width: 350px;
-    height: 275px;
+    width: 100%;
+    height: 100%;
     border-radius: 10px;
 }
 
