--- a/css/itens.css
+++ b/css/itens.css
@@ -4,6 +4,7 @@
 
 .item2{
     grid-column: 3/4;
+    top: 6%;
 }
 
 .item3{
@@ -20,8 +21,50 @@
 }
 
 .item6{
-
+    bottom: 12%;
 }
+
+.item7{
+    grid-column: 1/3;
+    bottom: 19%;
+}
+
+.item8{
+    grid-column: 3/3;
+    bottom: 25%;
+}
+
+.item9{
+    grid-column: 1/3;
+    bottom: 44%;
+}
+
+.item10{
+    grid-column: 1/3;
+    bottom: 55%;
+}
+
+.item11{
+    grid-column: 3/4;
+    bottom: 92%;
+}
+
+.item12{
+    grid-column: 3/4;
+    bottom: 370%;
+}
+
+.item13{
+    grid-column: 1/3;
+    bottom: 213%;
+}
+
+.item14{
+    grid-column: 3/4;
+    bottom: 203%;
+}
+
+/* MEDIA SCREEN */
 
 @media (max-width: 480px) {
     .item1{
@@ -30,6 +73,7 @@
 
     .item2{
         grid-column: none;
+        top: 0;
     }
 
     .item3{
@@ -42,9 +86,51 @@
 
     .item5{
         grid-column: none;
+        bottom: 0;
     }
 
     .item6{
         grid-column: none;
+        bottom: 0;
+    }
+
+    .item7{
+        grid-column: none;
+        bottom: 0;
+    }
+
+    .item8{
+        grid-column: none;
+        bottom: 0;
+    }
+
+    .item9{
+        grid-column: none;
+        bottom: 0;
+    }
+
+    .item10{
+        grid-column: none;
+        bottom: 0;
+    }
+
+    .item11{
+        grid-column: none;
+        bottom: 0;
+    }
+
+    .item12{
+        grid-column: none;
+        bottom: 0;
+    }
+
+    .item13{
+        grid-column: none;
+        bottom: 0;
+    }
+
+    .item14{
+        grid-column: none;
+        bottom: 0;
     }
 }
