--- a/css/itens.css
+++ b/css/itens.css
@@ -21,47 +21,55 @@
 }
 
 .item6{
-    bottom: 12%;
+    position: relative;
+    margin-top: -135px;
 }
 
 .item7{
     grid-column: 1/3;
-    bottom: 19%;
+    position: relative;
+    margin-top: -76px;
 }
 
 .item8{
     grid-column: 3/3;
-    bottom: 25%;
+    position: relative;
+    margin-top: -148px;
 }
 
 .item9{
     grid-column: 1/3;
-    bottom: 44%;
+    position: relative;
+    margin-top: -75px;
 }
 
 .item10{
     grid-column: 1/3;
-    bottom: 55%;
+    position: relative;
+    margin-top: -10px;
 }
 
 .item11{
     grid-column: 3/4;
-    bottom: 92%;
+    position: relative;
+    margin-top: -500px;
 }
 
 .item12{
     grid-column: 3/4;
-    bottom: 370%;
+    position: relative;
+    margin-top: -80px;
 }
 
 .item13{
     grid-column: 1/3;
-    bottom: 213%;
+    position: relative;
+    margin-top: -118px;
 }
 
 .item14{
     grid-column: 3/4;
-    bottom: 203%;
+   
 }
 
 /* MEDIA SCREEN */
@@ -78,59 +86,61 @@
 
     .item3{
         grid-column: none;
+        margin-top: 0;
     }
 
     .item4{
         grid-column: none;
+        margin-top: 0;
     }
 
     .item5{
         grid-column: none;
-        bottom: 0;
+        margin-top: 0;
     }
 
     .item6{
         grid-column: none;
-        bottom: 0;
+        margin-top: 0;
     }
 
     .item7{
         grid-column: none;
-        bottom: 0;
+        margin-top: 0;
     }
 
     .item8{
         grid-column: none;
-        bottom: 0;
+        margin-top: 0;
     }
 
     .item9{
         grid-column: none;
-        bottom: 0;
+        margin-top: 0;
     }
 
     .item10{
         grid-column: none;
-        bottom: 0;
+        margin-top: 0;
     }
 
     .item11{
         grid-column: none;
-        bottom: 0;
+        margin-top: 0;
     }
 
     .item12{
         grid-column: none;
-        bottom: 0;
+        margin-top: 0;
     }
 
     .item13{
         grid-column: none;
-        bottom: 0;
+        margin-top: 0;
     }
 
     .item14{
         grid-column: none;
-        bottom: 0;
+        margin-top: 0;
     }
 }
