--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ header{
     justify-content: space-between;
     row-gap: 20px;
     column-gap: 5px;
-    grid-template-columns: auto auto auto;
+    grid-template-columns:auto auto auto;
 }
 
 .estil-img{
@@ -128,6 +128,7 @@ header{
 
 .estil-img img{
     display: block;
+    align-self: start;
     width: 100%;
     height: 100%;
     border-radius: 10px;
