--- a/css/itens.css
+++ b/css/itens.css
@@ -40,7 +40,7 @@
 .item9{
     grid-column: 1/3;
     position: relative;
-    margin-top: -75px;
+    margin-top: -80px;
 }
 
 .item10{
@@ -52,24 +52,25 @@
 .item11{
     grid-column: 3/4;
     position: relative;
-    margin-top: -500px;
+    margin-top: -560px;
 }
 
 .item12{
     grid-column: 3/4;
     position: relative;
-    margin-top: -80px;
+    margin-top: -95px;
 }
 
 .item13{
     grid-column: 1/3;
     position: relative;
-    margin-top: -118px;
+    margin-top: -125px;
 }
 
 .item14{
     grid-column: 3/4;
-   
+    position: relative;
+    margin-top: -30px;
 }
 
 /* MEDIA SCREEN */
