--- a/css/itens.css
+++ b/css/itens.css
@@ -22,55 +22,55 @@
 
 .item6{
     position: relative;
-    margin-top: -135px;
+    margin-top: -45%;
 }
 
 .item7{
     grid-column: 1/3;
     position: relative;
-    margin-top: -76px;
+    margin-top: -13%;
 }
 
 .item8{
     grid-column: 3/3;
     position: relative;
-    margin-top: -148px;
+    margin-top: -45%;
 }
 
 .item9{
     grid-column: 1/3;
     position: relative;
-    margin-top: -80px;
+    margin-top: -13%;
 }
 
 .item10{
     grid-column: 1/3;
     position: relative;
-    margin-top: -10px;
+    margin-top: -1%;
 }
 
 .item11{
     grid-column: 3/4;
     position: relative;
-    margin-top: -560px;
+    margin-top: -155%;
 }
 
 .item12{
     grid-column: 3/4;
     position: relative;
-    margin-top: -95px;
+    margin-top: -25%;
 }
 
 .item13{
     grid-column: 1/3;
     position: relative;
-    margin-top: -125px;
+    margin-top: -20%;
 }
 
 .item14{
     grid-column: 3/4;
     position: relative;
-    margin-top: -30px;
+    margin-top: -6%;
 }
 
 /* MEDIA SCREEN */
