--- a/css/itens.css
+++ b/css/itens.css
@@ -11,63 +11,75 @@
     grid-column: 1/4;
 }
 
-.item4{
+/* .item4{
+    
+}
+
+.item5{
+    
+}
+
+.item6{
+
+} */
+
+.item7{
     grid-column-start: 1;
     grid-column-end: 2;
 }
 
-.item5{
+.item8{
     grid-column: 2/3;
 }
 
-.item6{
-    position: relative;
-    margin-top: -45%;
-}
-
-.item7{
-    grid-column: 1/3;
-    position: relative;
-    margin-top: -13%;
-}
-
-.item8{
-    grid-column: 3/3;
-    position: relative;
-    margin-top: -45%;
-}
-
 .item9{
-    grid-column: 1/3;
     position: relative;
-    margin-top: -13%;
+    margin-top: -45%;
 }
 
 .item10{
     grid-column: 1/3;
     position: relative;
-    margin-top: -1%;
+    margin-top: -13%;
 }
 
 .item11{
-    grid-column: 3/4;
+    grid-column: 3/3;
     position: relative;
-    margin-top: -155%;
+    margin-top: -45%;
 }
 
 .item12{
-    grid-column: 3/4;
+    grid-column: 1/3;
     position: relative;
-    margin-top: -25%;
+    margin-top: -13%;
 }
 
 .item13{
     grid-column: 1/3;
     position: relative;
-    margin-top: -20%;
+    margin-top: -1%;
 }
 
 .item14{
+    grid-column: 3/4;
+    position: relative;
+    margin-top: -155%;
+}
+
+.item15{
+    grid-column: 3/4;
+    position: relative;
+    margin-top: -25%;
+}
+
+.item16{
+    grid-column: 1/3;
+    position: relative;
+    margin-top: -20%;
+}
+
+.item17{
     grid-column: 3/4;
     position: relative;
     margin-top: -6%;
@@ -90,20 +102,17 @@
         margin-top: 0;
     }
 
-    .item4{
-        grid-column: none;
-        margin-top: 0;
+    /* .item4{
+        
     }
 
     .item5{
-        grid-column: none;
-        margin-top: 0;
+        
     }
 
     .item6{
-        grid-column: none;
-        margin-top: 0;
-    }
+
+    } */
 
     .item7{
         grid-column: none;
@@ -141,6 +150,21 @@
     }
 
     .item14{
+        grid-column: none;
+        margin-top: 0;
+    }
+
+    .item15{
+        grid-column: none;
+        margin-top: 0;
+    }
+
+    .item16{
+        grid-column: none;
+        margin-top: 0;
+    }
+
+    .item17{
         grid-column: none;
         margin-top: 0;
     }
