--- a/css/itens.css
+++ b/css/itens.css
@@ -4,24 +4,28 @@
 
 .item2{
     grid-column: 3/4;
-    top: 6%;
+    top: 44%;
 }
 
 .item3{
     grid-column: 1/4;
 }
 
-/* .item4{
-    
+.item4{
+    grid-column: 3/4;
+    position: relative;
+    margin-top: 56%;
 }
 
 .item5{
-    
+    grid-column: 1/2;
+    grid-row: 2/3;
 }
 
 .item6{
-
-} */
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
 
 .item7{
     grid-column-start: 1;
@@ -102,17 +106,20 @@
         margin-top: 0;
     }
 
-    /* .item4{
-        
+    .item4{
+        grid-column: none;
+        margin-top: 0;
     }
 
     .item5{
-        
+        grid-column: none;
+        margin-top: 0;
     }
 
     .item6{
-
-    } */
+        grid-column: none;
+        margin-top: 0;
+    }
 
     .item7{
         grid-column: none;
