--- a/css/itens_out.css
+++ b/css/itens_out.css
@@ -1,3 +1,37 @@
 .item1_1{
     grid-column: 1/3;
 }
+
+/* CELULAR VERSION */
+
+@media (max-width: 480px) {
+    body{
+        height: 100vh;
+        width: 100vw;
+    }
+
+    .img-box{
+        margin-top: 50px;
+    }
+
+    .estil-img img{
+        width: 100%;
+        height: auto;
+    }
+
+    .item1_1{
+        grid-column: 1/3;
+    }
+
+    .item1_2{
+        grid-column: 3/3;
+    }
+
+    .endpage{
+        margin-top: 50px;
+    }
+
+    .endpage p{
+        font-size: 18px;
+    }
+}
