--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,8 @@ h1{
 body {
     height: 100%;
     width: 100%;
-    background-color: #2b2828 !important;
+    background-color: #242222 !important;
+    /* background-color: #2b2828 !important; */
 }
 
 header{
