--- a/css/itens_out.css
+++ b/css/itens_out.css
@@ -2,6 +2,31 @@
     grid-column: 1/3;
 }
 
+/* ROLE PRAÇA */
+
+.item2_1{
+    margin-left: 30%;
+    margin-right: auto;
+    grid-column: 1/2;
+    grid-row: 1/1;
+    width: 70%;
+}
+
+.item2_2{
+    margin-left: auto;
+    margin-right: 30%;
+    width: 70%;
+    grid-column: 2/3;
+    grid-row: 1/1;
+}
+
+.item2_3{
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    grid-column: 1/3;
+}
+
 /* CELULAR VERSION */
 
 @media (max-width: 480px) {
