--- a/css/itens.css
+++ b/css/itens.css
@@ -1,15 +1,18 @@
 .item1{
     grid-column: 1/3;
     top: 3%;
+    position: relative;
 }
 
 .item2{
     grid-column: 3/4;
     top: 46%;
+    position: relative;
 }
 
 .item3{
     grid-column: 1/4;
+    position: relative;
 }
 
 .item4{
@@ -21,20 +24,24 @@
 .item5{
     grid-column: 1/2;
     grid-row: 2/3;
+    position: relative;
 }
 
 .item6{
     grid-column: 2/3;
     grid-row: 2/3;
+    position: relative;
 }
 
 .item7{
     grid-column-start: 1;
     grid-column-end: 2;
+    position: relative;
 }
 
 .item8{
     grid-column: 2/3;
+    position: relative;
 }
 
 .item9{
@@ -124,112 +131,121 @@
 
 @media (max-width: 480px) {
     .item1{
-        grid-column: none;
+        grid-column: 1/1;
+        grid-row: 1/1;
         top: 0;
     }
 
     .item2{
-        grid-column: none;
+        grid-column: 1/1;
+        grid-row: 2/2;
         top: 0;
     }
 
     .item3{
-        grid-column: none;
+        grid-column: 1/1;
+        grid-row: 6/6;
         margin-top: 0;
     }
 
     .item4{
-        grid-column: none;
+        grid-column: 1/1;
+        grid-row: 3/3;
         margin-top: 0;
     }
 
     .item5{
-        grid-column: none;
+        grid-column: 1/1;
+        grid-row: 4/4;
         margin-top: 0;
     }
 
     .item6{
-        grid-column: none;
+        grid-column: 1/1;
+        grid-row: 5/5;
         margin-top: 0;
     }
 
     .item7{
-        grid-column: none;
+        grid-column: 1/1;
+        grid-row: 7/7;
         margin-top: 0;
     }
 
     .item8{
-        grid-column: none;
+        grid-column: 1/1;
+        grid-row: 8/8;
         margin-top: 0;
     }
 
     .item9{
-        grid-column: none;
+        grid-column: 1/1;
+        grid-row: 9/9;
         margin-top: 0;
     }
 
     .item10{
-        grid-column: none;
+        grid-column: 1/1;
         margin-top: 0;
     }
 
     .item11{
-        grid-column: none;
+        grid-column: 1/1;
         margin-top: 0;
     }
 
     .item12{
-        grid-column: none;
+        grid-column: 1/1;
         margin-top: 0;
     }
 
     .item13{
-        grid-column: none;
+        grid-column: 1/1;
         margin-top: 0;
     }
 
     .item14{
-        grid-column: none;
+        grid-column: 1/1;
         margin-top: 0;
     }
 
     .item15{
-        grid-column: none;
+        grid-column: 1/1;
         margin-top: 0;
     }
 
     .item16{
-        grid-column: none;
+        grid-column: 1/1;
         margin-top: 0;
     }
 
     .item17{
-        grid-column: none;
+        grid-column: 1/1;
         margin-top: 0;
     }
 
     .item18{
-        grid-column: none;
+        grid-column: 1/1;
         margin-top: 0;
     }
 
     .item19{
-        grid-column: none;
+        grid-column: 1/1;
         margin-top: 0;
     }
 
     .item20{
-        grid-column: none;
+        grid-column: 1/1;
         margin-top: 0;
     }
 
     .item21{
-        grid-column: none;
+        grid-column: 1/1;
         margin-top: 0;
     }
 
     .item22{
-        grid-column: none;
+        grid-column: 1/1;
         margin-top: 0;
     }
 }
