--- a/css/itens_out.css
+++ b/css/itens_out.css
@@ -30,6 +30,24 @@
 /* CELULAR VERSION */
 
 @media (max-width: 480px) {
+
+    /* IMAGEMS CELULAR */
+
+    .item2_1{
+        width: 80%;
+        margin-left: 20%;
+    }
+
+    .item2_2{
+        margin-right: 20%;
+        width: 80%;
+    }
+
+    .item2_3{
+        width: 80%;
+    }
+
+    /* CORPO SITE */
     body{
         height: auto;
         width: 100vw;
