--- a/css/itens_out.css
+++ b/css/itens_out.css
@@ -27,12 +27,25 @@
     grid-column: 1/3;
 }
 
+.item3_1{
+    margin: 0 auto;
+    width: 60%;
+}
+
 /* CELULAR VERSION */
 
 @media (max-width: 480px) {
-
+    
+    
     /* IMAGEMS CELULAR */
-
+    .item1_1{
+        grid-column: 1/3;
+    }
+    
+    .item1_2{
+        grid-column: 3/3;
+    }
+    
     .item2_1{
         width: 80%;
         margin-left: 20%;
@@ -47,6 +60,10 @@
         width: 80%;
     }
 
+    .item3_1{
+        width: 90%;
+    }
+    
     /* CORPO SITE */
     body{
         height: auto;
@@ -62,13 +79,6 @@
         height: auto;
     }
 
-    .item1_1{
-        grid-column: 1/3;
-    }
-
-    .item1_2{
-        grid-column: 3/3;
-    }
 
     .endpage{
         margin-top: 50px;
