--- a/css/itens_out.css
+++ b/css/itens_out.css
@@ -32,6 +32,20 @@
     width: 60%;
 }
 
+.item4_1{
+    margin-left: 30%;
+    margin-right: auto;
+    grid-column: 1/2;
+    width: 70%;
+}
+
+.item4_2{
+    margin-left: auto;
+    margin-right: 30%;
+    grid-column: 2/3;
+    width: 70%;
+}
+
 /* CELULAR VERSION */
 
 @media (max-width: 480px) {
@@ -62,6 +76,16 @@
 
     .item3_1{
         width: 90%;
+    }
+
+    .item4_1{
+        width: 80%;
+        margin-left: 20%;
+    }
+
+    .item4_2{
+        width: 80%;
+        margin-right: 20%;
     }
     
     /* CORPO SITE */
