--- a/css/itens_out.css
+++ b/css/itens_out.css
@@ -79,13 +79,13 @@
     }
 
     .item4_1{
-        width: 80%;
-        margin-left: 20%;
+        width: 100%;
+        margin-left: 0;
     }
 
     .item4_2{
-        width: 80%;
-        margin-right: 20%;
+        width: 100%;
+        margin-right: 0;
     }
     
     /* CORPO SITE */
