--- a/css/itens_out.css
+++ b/css/itens_out.css
@@ -46,6 +46,85 @@
     width: 70%;
 }
 
+.item5_1{
+    margin-left: 15%;
+    margin-right: auto;
+    grid-column: 1/2;
+    width: 85%;
+}
+
+.item5_2{
+    margin-left: auto;
+    margin-right: 15%;
+    grid-column: 2/3;
+    width: 85%;
+}
+
+.item6_1{
+    width: 40%;
+    margin: 0 auto;
+}
+
+.item7_1{
+    margin-left: 40%;
+    margin-right: auto;
+    grid-column: 1/2;
+    grid-row: 1/1;
+    width: 60%;
+}
+
+.item7_2{
+    margin-left: auto;
+    margin-right: 40%;
+    width: 60%;
+    grid-column: 2/3;
+    grid-row: 1/1;
+}
+
+.item7_3{
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+    grid-column: 1/3;
+}
+
+.item8_1{
+    grid-column: 1/2;
+    grid-row: 1/1;
+    width: 80%;
+    margin-left: 28%;
+    margin-right: auto;
+}
+
+.item8_2{
+    grid-column: 2/3;
+    grid-row: 1/1;
+    width: 80%;
+    margin-left: auto;
+    margin-right: 10%;
+}
+
+.item8_3{
+    grid-column: 3/4;
+    grid-row: 1/1;
+    width: 100%;
+    position: relative;
+    margin-top: 9%;
+    right: 8%;
+    margin-right: 25%;
+    margin-left: auto;
+}
+
+.item8_4{
+    grid-column: 1/4;
+    grid-row: 2/2;
+    position: relative;
+    left: 3.5%;
+    margin-left: auto;
+    width: 88%;
+    margin-right: auto;
+}
+
 /* CELULAR VERSION */
 
 @media (max-width: 480px) {
@@ -87,7 +166,59 @@
         width: 100%;
         margin-right: 0;
     }
+
+    .item5_1{
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .item5_2{
+        width: 100%;
+        margin-right: 0;
+    }
     
+    .item6_1{
+        margin: 0 auto;
+        width: 80%;
+    }
+
+    .item7_1{
+        margin-left: 10%;
+        width: 90%;
+    }
+
+    .item7_2{
+        margin-right: 10%;
+        width: 90%;
+    }
+
+    .item7_3{
+        width: 90%;
+    }
+
+    .item8_1{
+        left: 7%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .item8_2{
+        margin-right: auto;
+        margin-left: auto;
+        right: 12%;
+    }
+
+    .item8_3{
+        margin-right: 10%;
+        margin-left: auto;
+        right: 20%;
+    }
+    .item8_4{
+        margin-right: auto;
+        margin-left: auto;
+        left: 0;
+    }
+
     /* CORPO SITE */
     body{
         height: auto;
