--- a/css/itens_out.css
+++ b/css/itens_out.css
@@ -125,6 +125,25 @@
     margin-right: auto;
 }
 
+.item9_1{
+    grid-column: 1/3;
+    margin-left: auto;
+    margin-right: auto;
+}   
+
+.item9_2{
+    position: relative;
+    margin-top: 38%;
+    grid-column: 3/4;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.item9_3{
+    grid-column: 1/4;
+    grid-row: 2/2;
+}
+
 /* CELULAR VERSION */
 
 @media (max-width: 480px) {
