--- a/css/itens_out.css
+++ b/css/itens_out.css
@@ -144,6 +144,98 @@
     grid-row: 2/2;
 }
 
+.item10_1{
+    grid-column: 1/2;
+    grid-row: 1/1;
+    width: 70%;
+    margin-left: 30%;
+    margin-right: auto;
+}
+
+.item10_2{
+    grid-column: 2/3;
+    grid-row: 1/1;
+    width: 70%;
+    margin-left: auto;
+    margin-right: 30%;
+}
+
+.item10_3{
+    grid-column: 1/3;
+    grid-row: 2/2;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.item10_4{
+    grid-column: 1/2;
+    grid-row: 3/3;
+    width: 70%;
+    margin-left: 30%;
+    margin-right: auto;
+}
+
+.item10_5{
+    position: relative;
+    margin-top: -85%;
+    grid-column: 2/3;
+    grid-row: 3/3;
+    width: 70%;
+    margin-left: auto;
+    margin-right: 30%;
+}
+
+.item10_6{
+    position: relative;
+    margin-top: -130%;
+    grid-column: 2/3;
+    grid-row: 4/4;
+    width: 70%;
+    margin-left: auto;
+    margin-right: 30%;
+}
+
+.item10_7{
+    position: relative;
+    margin-top: -2%;
+    grid-column: 1/2;
+    grid-row: 4/4;
+    width: 70%;
+    margin-left: 30%;
+    margin-right: auto;
+}
+
+.item10_8{
+    position: relative;
+    margin-top: -88%;
+    grid-column: 2/3;
+    grid-row: 5/5;
+    width: 70%;
+    margin-left: auto;
+    margin-right: 30%;
+}
+
+.item10_9{
+    position: relative;
+    margin-top: -2%;
+    grid-column: 1/2;
+    grid-row: 5/5;
+    width: 70%;
+    margin-left: 30%;
+    margin-right: auto;
+}
+
+.item10_10{
+    position: relative;
+    margin-top: -50%;
+    grid-column: 2/3;
+    grid-row: 6/6;
+    width: 70%;
+    margin-left: auto;
+    margin-right: 30%;
+}
+
 /* CELULAR VERSION */
 
 @media (max-width: 480px) {
@@ -236,6 +328,70 @@
         margin-right: auto;
         margin-left: auto;
         left: 0;
+    }
+
+    .item9_1{
+    width: 80%;
+    }
+
+    .item9_2{
+        margin-top: 13%;
+        width: 105%;
+        right: 22%;
+    }
+
+    .item9_3{
+        width: 85%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .item10_1{
+        width: 90%;
+        margin-left: 10%;
+    }
+
+    .item10_2{
+        width: 90%;
+        margin-right: 10%;
+    }
+
+    .item10_3{
+        width: 90%;
+    }
+
+    .item10_4{
+        width: 90%;
+        margin-left: 10%;
+    }
+
+    .item10_5{
+        width: 90%;
+        margin-top: -108%;
+    }
+
+    .item10_6{
+        width: 90%;
+        margin-top: -150%;
+    }
+
+    .item10_7{
+        width: 90%;
+        margin-left: 10%;
+    }
+
+    .item10_8{
+        width: 90%;
+        margin-top: -95%;
+    }
+
+    .item10_9{
+        width: 90%;
+        margin-left: 10%;
+    }
+
+    .item10_10{
+        width: 90%;
     }
 
     /* CORPO SITE */
