--- a/css/itens_out.css
+++ b/css/itens_out.css
@@ -236,6 +236,94 @@
     margin-right: 30%;
 }
 
+.item11_1{
+    grid-column: 1/2;
+    grid-row: 1/1;
+}
+
+.item11_2{
+    grid-column: 2/3;
+    grid-row: 1/1;
+}
+
+.item11_3{
+    grid-column: 1/2;
+    grid-row: 2/2;
+}
+
+.item11_4{
+    grid-column: 2/3;
+    grid-row: 2/2;
+}
+
+.item12_1{
+    grid-column: 1/2;
+    grid-row: 1/1;
+}
+
+.item12_2{
+    position: relative;
+    grid-column: 2/3;
+    grid-row: 1/1;
+    margin-top: -55%;
+}
+
+.item12_3{
+    position: relative;
+    grid-column: 3/4;
+    grid-row: 1/1;
+    margin-top: -55%;
+}
+
+.item12_4{
+    position: relative;
+    grid-column: 2/3;
+    grid-row: 2/2;
+    margin-top: -90%;
+}
+
+.item12_5{
+    position: relative;
+    grid-column: 1/4;
+    grid-row: 3/3;
+    margin-top: -3%;
+}
+
+.item12_6{
+    position: relative;
+    grid-column: 3/4;
+    grid-row: 2/2;
+    margin-top: -90%;
+}
+
+.item13_1{
+    position: relative;
+    grid-column: 1/4;
+    grid-row: 2/2;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -1%;
+}
+
+.item13_2{
+    grid-column: 3/4;
+    grid-row: 1/1;
+    width: 70%;
+    margin-left: auto;
+    margin-right: 30%;
+}
+
+.item13_3{
+    position: relative;
+    margin-top: 28%;
+    grid-column: 1/2;
+    grid-row: 1/1;
+    width: 70%;
+    margin-left: 30%;
+    margin-right: auto;
+}
+
 /* CELULAR VERSION */
 
 @media (max-width: 480px) {
@@ -392,6 +480,23 @@
 
     .item10_10{
         width: 90%;
+    }
+
+    .item13_1{
+        width: 100%;
+    }
+
+    .item13_2{
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .item13_3{
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 37%;
     }
 
     /* CORPO SITE */
