--- a/css/itens_out.css
+++ b/css/itens_out.css
@@ -324,6 +324,34 @@
     margin-right: auto;
 }
 
+.item14_1{
+    grid-column: 1/2;
+    grid-row: 1/1;
+}
+
+.item14_2{
+    grid-column: 2/3;
+    grid-row: 1/1;
+    margin-top: -120%;
+}
+
+.item14_3{
+    grid-column: 3/4;
+    grid-row: 1/1;
+}
+
+.item14_4{
+    grid-column: 2/3;
+    grid-row: 3/3;
+    margin-top: -204%;
+}
+
+.item14_5{
+    grid-column: 2/3;
+    grid-row: 2/2;
+    margin-top: -70%;
+}
+
 .bonus_1{
     grid-column: 1/2;
     grid-row: 1/1;
