--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,14 @@ header{
     font-size: 500px;
 }
 
+.ultimoParagrafo{
+    text-align: center;
+}
+
+.ultimoParagrafo b{
+    font-size: 25px;
+}
+
 /* .heart {
     margin: 200px 0 100px 0;
     background-color: blue;
